fixed double scrollbar in different browsers

--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -1,5 +1,9 @@
 /*----------------------
 Smooth Scroll --------*/
+.no-scroll {
+  overflow-y: hidden;
+}
+
 .front-container {
   scroll-behavior: smooth;
   overscroll-behavior-y: contain;
